--- a/search.html
+++ b/search.html
@@ -4,9 +4,11 @@
     <title>Google Search</title>
 </head>
 <body>
+    <div>
         <form action="https://www.google.com/search" method="GET">
             <input type="text" name="q" class="search-box" placeholder="Search Item">
             <button type="submit" class="search-button">Search</button>
         </form>
+    </div>
 </body>
 </html>
